@@ -1,3 +1,8 @@
+2020-02-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* xetex.web: Allow fetching value from a token defined by
+	\Umathchardef, to be compatible with LuaTeX. Fixes #109.
+
 2020-02-23  Clerk Ma  <maqiyuan130324@vip.qq.com>
 
 	* xetex.web: Fix a potential bug in the primitive
